--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -14,7 +14,9 @@ body {
     display: flex;
     flex-direction: column;
     height: 100%;
-    font-family: "Arial", sans-serif;
+    font-family:  'Lexend Deca', "Arial", sans-serif;
+    font-family: 'space mono';
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     margin: 0;
@@ -26,3 +28,13 @@ img {
     height: auto;
     vertical-align: middle;
 }
+
+:root {
+    --btn-bg-color:  #FCB72B;
+    --hero-text-color: #ffffff;
+    
+    --main-text-color: #202020;
+    --news-time-text-color: #6b6d97;
+    --popular-news-bg-color: #f6f6f9;
+    --footer-bg-color: #295093;
+  }
