--- a/scss/all-blokc/_hero.scss
+++ b/scss/all-blokc/_hero.scss
@@ -1,7 +1,56 @@
-.site-hero{
-    
+.site-hero {
     height: 650px;
-    background-image: url('./img/Bitmap.jpg');
+    background-image: url('../img/Bitmap.jpg');
     background-repeat: no-repeat;
     background-position: center center;
+    background-size: cover;
 }
+
+.hero__heading {
+    width: 500px;
+    margin: 0px;
+    padding-top: 153px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 56px;
+    /* or 100% */
+
+    letter-spacing: -2.5px;
+
+    color: #FFFFFF;
+}
+
+.hero__text {
+    width: 500px;
+    padding-left: 57px;
+    padding-top: 40px;
+    padding-right: 40px;
+    font-family: 'Lexend Deca';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 25px;
+    /* or 167% */
+
+
+    color: #FFFFFF;
+}
+
+.hero__text::before {
+    content: url('../img/Path\ 2.svg');
+    position: absolute;
+    left: 0.5px;
+    top: 466px;
+}
+
+.hero__text::after {
+    content: url(../img/Group\ 8\ Copy.svg);
+    position: absolute;
+    left: 705px;
+    top: 468px;
+}
+
+ .hero__end{
+     padding-top: 40px;
+ }
