--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,3 +7,5 @@
 @import 'all-blokc/all-blokc';
 @import 'all-blokc/btn';
 @import 'all-blokc/hero';
+@import 'all-blokc/site-info';
+@import 'all-blokc/communication';
