--- a/scss/_veriables.scss
+++ b/scss/_veriables.scss
@@ -1,1 +1,11 @@
 // BUYERDA O'ZGARUVCHILAR
+
+:root {
+    --btn-bg-color:  #FCB72B;
+    --hero-text-color: #ffffff;
+    
+    // --main-text-color: #202020;
+    // --news-time-text-color: #6b6d97;
+    // --popular-news-bg-color: #f6f6f9;
+    // --footer-bg-color: #295093;
+  }
