--- a/css/main.css
+++ b/css/main.css
@@ -520,9 +520,6 @@ img {
 
 .main {
   flex-grow: 1;
-}
-
-main {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -530,7 +527,7 @@ main {
 
 .site-hero {
   padding-bottom: 152px;
-  background-image: url("../../img/Bitmap.jpg");
+  background-image: url("../img/heroimg/hero--bg.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -564,14 +561,14 @@ main {
 }
 
 .hero__text::before {
-  content: url("../../img/Path 2.svg");
+  content: url("../img/heroimg/to'g'rli-chiziq.png");
   position: absolute;
   top: 466px;
   left: calc(50% - 766px);
 }
 
 .hero__text::after {
-  content: url(../../img/Group\ 8\ Copy.svg);
+  content: url("../img/heroimg/strelka--img.png");
   position: absolute;
   top: 468px;
   left: calc(50% - 35px);
@@ -581,6 +578,14 @@ main {
   padding-top: 40px;
 }
 
+@media only screen and (max-width: 768px) {
+  .container {
+    width: 768px;
+  }
+  .site-hero {
+    margin: 0 auto;
+  }
+}
 .site-footer {
   background: #495567;
 }
@@ -604,7 +609,18 @@ main {
   color: #FFFFFF;
 }
 
+.wrapper__App__Gooleplay {
+  display: flex;
+  align-items: center;
+  gap: 34px;
+}
+
 .footer__wrapper-Appstore {
+  background-color: #E5ECF4;
+  border-radius: 4px;
+}
+
+.footer__wrapper-GooglePlay {
   background-color: #E5ECF4;
   border-radius: 4px;
 }
@@ -615,8 +631,10 @@ main {
 
 .footer_Appstore_end {
   position: relative;
-  z-index: 2;
-  display: inline-block;
+}
+
+.footer__GooglePlay_end {
+  position: relative;
 }
 
 .footer_Appstore_end::before {
@@ -628,7 +646,7 @@ main {
   position: absolute;
   height: 29px;
   left: 13px;
-  background-image: url(../../img/shape2.svg);
+  background-image: url("../img/communication img/applelogo.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -638,14 +656,14 @@ main {
 
 .footer_GooglePlay_end::before {
   display: inline-block;
-  width: 25px;
-  z-index: 2;
-  height: 28px;
+  width: 28px;
+  z-index: 10;
+  height: 30px;
   top: 15px;
   position: absolute;
-  height: 29px;
+  height: 30px;
   left: 13px;
-  background-image: url(../../img/);
+  background-image: url("../img/communication img/applelogo.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -677,6 +695,48 @@ main {
   color: #495567;
 }
 
+.footer__end {
+  width: 100%;
+  background-color: #333A44;
+  height: 96px;
+}
+
+.site__footer-end {
+  background-color: #333A44;
+}
+
+.site__footer-end-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 35px;
+  padding-bottom: 32px;
+}
+
+.wrapper_footer__logo__navbar {
+  display: flex;
+  align-items: center;
+  gap: 58.08px;
+}
+
+.header__nav-item {
+  border: none;
+}
+
+.site__footer-end-list {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+
+.site__footer-end-item {
+  list-style-type: none;
+}
+
+.site__footer-end-item a:active {
+  color: white;
+}
+
 .site-info {
   margin-top: 160px;
   height: 291px;
@@ -692,6 +752,7 @@ main {
   position: absolute;
   top: 34px;
   z-index: -100;
+  right: calc(50% - 230px);
 }
 
 .site__info-wrapper {
@@ -725,25 +786,18 @@ main {
   color: #939CAA;
 }
 
-.communication {
-  background-image: url("../../img/Mask.svg");
-  background-repeat: no-repeat;
-  background-position: center right;
-  z-index: 1000;
+@media only screen and (max-width: 768px) {
+  .site__info-wrapper {
+    flex-direction: column;
+  }
 }
-
-.middle {
-  background-image: url("../../img/ Copy.jpg");
-  background-repeat: no-repeat;
-  background-position: center left;
-}
-
 .communication__wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 147px;
   margin-bottom: 178px;
+  position: relative;
 }
 
 .communication__start-title {
@@ -774,8 +828,49 @@ main {
   margin-top: 40px;
 }
 
-.cummunication__end-img {
-  z-index: -1;
+.first::before {
+  content: url("../img/communication img/ustistr.png");
+  position: absolute;
+  right: -200px;
+  top: 295px;
+  z-index: 10;
+}
+
+.first::after {
+  content: url("../img/communication img/yarimdoiraimg.png");
+  position: absolute;
+  right: -200px;
+  top: 26px;
+}
+
+.second::before {
+  content: url("../img/communication img/leftyarim.png");
+  position: absolute;
+  top: 20px;
+  left: -200px;
+}
+
+.second::after {
+  content: url("../img/heroimg/strelka--img.png");
+  position: absolute;
+  left: -250px;
+  top: -10px;
+  z-index: 10;
+}
+
+.third::after {
+  content: url("../img/communication img/yarimdoiraimg.png");
+  position: absolute;
+  right: -200px;
+  top: 15px;
+}
+
+.third::before {
+  content: url("../img/communication img/thirdstr.png");
+  position: absolute;
+  right: -200px;
+  top: 80px;
+  z-index: 10;
 }
 
 .btn {
@@ -801,7 +896,7 @@ main {
 
 .site-hero {
   padding-bottom: 152px;
-  background-image: url("../../img/Bitmap.jpg");
+  background-image: url("../img/heroimg/hero--bg.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -835,14 +930,14 @@ main {
 }
 
 .hero__text::before {
-  content: url("../../img/Path 2.svg");
+  content: url("../img/heroimg/to'g'rli-chiziq.png");
   position: absolute;
   top: 466px;
   left: calc(50% - 766px);
 }
 
 .hero__text::after {
-  content: url(../../img/Group\ 8\ Copy.svg);
+  content: url("../img/heroimg/strelka--img.png");
   position: absolute;
   top: 468px;
   left: calc(50% - 35px);
@@ -852,6 +947,14 @@ main {
   padding-top: 40px;
 }
 
+@media only screen and (max-width: 768px) {
+  .container {
+    width: 768px;
+  }
+  .site-hero {
+    margin: 0 auto;
+  }
+}
 .site-info {
   margin-top: 160px;
   height: 291px;
@@ -867,6 +970,7 @@ main {
   position: absolute;
   top: 34px;
   z-index: -100;
+  right: calc(50% - 230px);
 }
 
 .site__info-wrapper {
@@ -900,25 +1004,18 @@ main {
   color: #939CAA;
 }
 
-.communication {
-  background-image: url("../../img/Mask.svg");
-  background-repeat: no-repeat;
-  background-position: center right;
-  z-index: 1000;
+@media only screen and (max-width: 768px) {
+  .site__info-wrapper {
+    flex-direction: column;
+  }
 }
-
-.middle {
-  background-image: url("../../img/ Copy.jpg");
-  background-repeat: no-repeat;
-  background-position: center left;
-}
-
 .communication__wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 147px;
   margin-bottom: 178px;
+  position: relative;
 }
 
 .communication__start-title {
@@ -949,8 +1046,49 @@ main {
   margin-top: 40px;
 }
 
-.cummunication__end-img {
-  z-index: -1;
+.first::before {
+  content: url("../img/communication img/ustistr.png");
+  position: absolute;
+  right: -200px;
+  top: 295px;
+  z-index: 10;
+}
+
+.first::after {
+  content: url("../img/communication img/yarimdoiraimg.png");
+  position: absolute;
+  right: -200px;
+  top: 26px;
+}
+
+.second::before {
+  content: url("../img/communication img/leftyarim.png");
+  position: absolute;
+  top: 20px;
+  left: -200px;
+}
+
+.second::after {
+  content: url("../img/heroimg/strelka--img.png");
+  position: absolute;
+  left: -250px;
+  top: -10px;
+  z-index: 10;
+}
+
+.third::after {
+  content: url("../img/communication img/yarimdoiraimg.png");
+  position: absolute;
+  right: -200px;
+  top: 15px;
+}
+
+.third::before {
+  content: url("../img/communication img/thirdstr.png");
+  position: absolute;
+  right: -200px;
+  top: 80px;
+  z-index: 10;
 }
 
 .site-footer {
@@ -976,7 +1114,18 @@ main {
   color: #FFFFFF;
 }
 
+.wrapper__App__Gooleplay {
+  display: flex;
+  align-items: center;
+  gap: 34px;
+}
+
 .footer__wrapper-Appstore {
+  background-color: #E5ECF4;
+  border-radius: 4px;
+}
+
+.footer__wrapper-GooglePlay {
   background-color: #E5ECF4;
   border-radius: 4px;
 }
@@ -987,8 +1136,10 @@ main {
 
 .footer_Appstore_end {
   position: relative;
-  z-index: 2;
-  display: inline-block;
+}
+
+.footer__GooglePlay_end {
+  position: relative;
 }
 
 .footer_Appstore_end::before {
@@ -1000,7 +1151,7 @@ main {
   position: absolute;
   height: 29px;
   left: 13px;
-  background-image: url(../../img/shape2.svg);
+  background-image: url("../img/communication img/applelogo.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -1010,14 +1161,14 @@ main {
 
 .footer_GooglePlay_end::before {
   display: inline-block;
-  width: 25px;
-  z-index: 2;
-  height: 28px;
+  width: 28px;
+  z-index: 10;
+  height: 30px;
   top: 15px;
   position: absolute;
-  height: 29px;
+  height: 30px;
   left: 13px;
-  background-image: url(../../img/);
+  background-image: url("../img/communication img/applelogo.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -1047,4 +1198,46 @@ main {
   /* identical to box height, or 120% */
   letter-spacing: -0.892857px;
   color: #495567;
+}
+
+.footer__end {
+  width: 100%;
+  background-color: #333A44;
+  height: 96px;
+}
+
+.site__footer-end {
+  background-color: #333A44;
+}
+
+.site__footer-end-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 35px;
+  padding-bottom: 32px;
+}
+
+.wrapper_footer__logo__navbar {
+  display: flex;
+  align-items: center;
+  gap: 58.08px;
+}
+
+.header__nav-item {
+  border: none;
+}
+
+.site__footer-end-list {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+
+.site__footer-end-item {
+  list-style-type: none;
+}
+
+.site__footer-end-item a:active {
+  color: white;
 }/*# sourceMappingURL=main.css.map */
