--- a/scss/all-blokc/_site-info.scss
+++ b/scss/all-blokc/_site-info.scss
@@ -12,18 +12,23 @@
     border: 8px solid #E5ECF4;
     position: absolute;
     top:34px;
+    
     z-index: -100;
+    right: calc(50% - 230px);
 }
 
 .site__info-wrapper{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
+
    
 }
 
 .site__info-box{
     width: 350px;
+   
 }
 
 .site__info-box__slogan{
@@ -51,4 +56,12 @@
     
     color: #939CAA;
     
+}
+
+
+@media only screen and (max-width: 768px) {
+    .site__info-wrapper{
+        flex-direction: column;
+        
+    }
 }
