--- a/scss/all-blokc/_header.scss
+++ b/scss/all-blokc/_header.scss
@@ -7,9 +7,11 @@
     padding-bottom: 21px;
 }
 .header__site-logo__nav-list-wrapper{
-     display: flex;
-     
+    
+    display: flex;
+     justify-content: space-between;
      align-items: center;
+    
 }
 
 .header__site-logo-link {
@@ -53,6 +55,9 @@
     color: var(--btn-bg-color);
 }
 
-@media only screen and (max-width: 768px) {
-   
-  }
+
+
+
+
+
+
