--- a/css/main.css
+++ b/css/main.css
@@ -519,7 +519,12 @@ img {
   color: var(--btn-bg-color);
 }
 
-
+.main {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
 
 .site-hero {
   padding-bottom: 152px;
